Fix spacing in header section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,8 +45,8 @@ h2 {
     }
 
     @media screen and (min-width: 768px) {
-      padding-top: $space-400;
-      padding-inline: $space-400;
+      padding-top: $space-800;
+      padding-inline: $space-800;
       img {
         border-radius: $rounded-s;
       }
@@ -61,22 +61,17 @@ h2 {
     );
     color: $clr-dark-charcoal;
     line-height: 1.1;
-    margin-bottom: 0.8rem;
+    margin-bottom: $space-200;
   }
 
   &__content-wrapper {
     padding: clamp(2rem, calc(2rem + ((1vw - 0.2rem) * 0.9091)), 2.5rem);
-    // padding: $space-250;
-    // margin-top: $space-400;
-
-    @media screen and (min-width: 768px) {
-      // padding: 0;
-    }
   }
 
   &__time {
     margin-top: $space-400;
     padding: $space-300;
+    padding-top: $space-250;
     background-color: $clr-rose-white;
     border-radius: $rounded-s;
     @include section-flex-gap(10px);
